<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".depreciacion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Parte para ingresar datos -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="398dp"
            android:orientation="vertical"
            android:padding="16dp">  

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_limpiar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_Limpiar_Boton"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.959"
                    app:layout_constraintStart_toEndOf="@+id/btn_Volver2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/btn_Volver2"
                    android:layout_width="118dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/txt_Volver_Boton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="92dp">

                <TextView
                    android:id="@+id/txt_cantidadMensual"
                    android:layout_width="100dp"
                    android:layout_height="17dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/txt_cantidadAnual"
                    android:layout_width="100dp"
                    android:layout_height="17dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/txt_cantidadMensual"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/txt_cantidadTotal"
                    app:layout_constraintTop_toBottomOf="@+id/textView5"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/txt_cantidadTotal"
                    android:layout_width="100dp"
                    android:layout_height="17dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="100dp"
                    android:layout_height="17dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/txt_nombre_total_String"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="100dp"
                    android:layout_height="17dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/txt_Anual_String"
                    app:layout_constraintEnd_toStartOf="@+id/textView4"
                    app:layout_constraintHorizontal_bias="0.489"
                    app:layout_constraintStart_toEndOf="@+id/textView3"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="100dp"
                    android:layout_height="17dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/txt_Mensual_String"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/txt_activoFijo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_nombre_activoFijo_String"
                android:inputType="text" />

            <EditText
                android:id="@+id/txt_unidades"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_nombre_unidades_String"
                android:inputType="text" />

            <EditText
                android:id="@+id/txt_valorUnitario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_nombre_valorUnitario_String"
                android:inputType="number|numberDecimal" />

            <EditText
                android:id="@+id/txt_vidaUtil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_nombre_vidaUtil_String"
                android:inputType="number" />

            <Button
                android:id="@+id/agregarButton"
                android:layout_width="199dp"
                android:layout_height="wrap_content"
                android:onClick="agregarActivoFijo"
                android:text="Agregar" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TableLayout
                            android:id="@+id/tableLayout1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <!-- Agrega tus filas y celdas para la tabla 1 aquí -->

                        </TableLayout>

                        <TableLayout
                            android:id="@+id/tableLayout2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <!-- Agrega tus filas y celdas para la tabla 2 aquí -->

                        </TableLayout>

                    </LinearLayout>
                </HorizontalScrollView>
            </ScrollView>

        </LinearLayout>

        <!-- Parte para mostrar la tabla -->
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>