<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
<<<<<<<< HEAD:app/src/main/res/layout/activity_gastospersonales1.xml
    tools:context=".gastospersonales">
========
    android:orientation="vertical"
    tools:context=".depreciacion">
>>>>>>>> bdf1117909a503d8bc2875df92192064265318f0:app/src/main/res/layout/activity_gastos_personales.xml



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Parte para ingresar datos -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="376dp"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_limpiar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_Limpiar_Boton"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.959"
                    app:layout_constraintStart_toEndOf="@+id/btn_Volver2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/btn_Volver2"
                    android:layout_width="118dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/txt_Volver_Boton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
<<<<<<<< HEAD:app/src/main/res/layout/activity_gastospersonales1.xml
                android:layout_height="64dp">
========
                android:layout_height="92dp">

                <TextView
                    android:id="@+id/txt_sueldoEmprendedor"
                    android:layout_width="100dp"
                    android:layout_height="17dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4"
                    app:layout_constraintVertical_bias="0.0" />
>>>>>>>> bdf1117909a503d8bc2875df92192064265318f0:app/src/main/res/layout/activity_gastos_personales.xml

                <TextView
                    android:id="@+id/txt_noNecesarios"
                    android:layout_width="100dp"
                    android:layout_height="17dp"
<<<<<<<< HEAD:app/src/main/res/layout/activity_gastospersonales1.xml
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.615"
                    app:layout_constraintStart_toEndOf="@+id/txt_cantidadTotal"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.872" />
========
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/txt_sueldoEmprendedor"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/txt_necesarios"
                    app:layout_constraintTop_toBottomOf="@+id/textView5"
                    app:layout_constraintVertical_bias="0.0" />
>>>>>>>> bdf1117909a503d8bc2875df92192064265318f0:app/src/main/res/layout/activity_gastos_personales.xml

                <TextView
                    android:id="@+id/txt_necesarios"
                    android:layout_width="100dp"
                    android:layout_height="17dp"
<<<<<<<< HEAD:app/src/main/res/layout/activity_gastospersonales1.xml
                    android:layout_marginStart="44dp"
========
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
>>>>>>>> bdf1117909a503d8bc2875df92192064265318f0:app/src/main/res/layout/activity_gastos_personales.xml
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.865" />

                <TextView
                    android:id="@+id/textView3"
<<<<<<<< HEAD:app/src/main/res/layout/activity_gastospersonales1.xml
                    android:layout_width="155dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:text="Total gastos necesarios"
========
                    android:layout_width="100dp"
                    android:layout_height="41dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/txt_necesarios"
>>>>>>>> bdf1117909a503d8bc2875df92192064265318f0:app/src/main/res/layout/activity_gastos_personales.xml
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView5"
<<<<<<<< HEAD:app/src/main/res/layout/activity_gastospersonales1.xml
                    android:layout_width="174dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="4dp"
                    android:text="Total gastos no necesarios"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.416"
========
                    android:layout_width="103dp"
                    android:layout_height="41dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/txt_no_necesarios"
                    app:layout_constraintEnd_toStartOf="@+id/textView4"
                    app:layout_constraintHorizontal_bias="0.489"
>>>>>>>> bdf1117909a503d8bc2875df92192064265318f0:app/src/main/res/layout/activity_gastos_personales.xml
                    app:layout_constraintStart_toEndOf="@+id/textView3"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.272" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="41dp">

                <TextView
<<<<<<<< HEAD:app/src/main/res/layout/activity_gastospersonales1.xml
                    android:id="@+id/textView"
                    android:layout_width="157dp"
                    android:layout_height="19dp"
                    android:text="Sueldo del emprendedor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.072"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.545" />

                <TextView
                    android:id="@+id/txt_sueldoEmprendedor"
                    android:layout_width="100dp"
                    android:layout_height="17dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.806"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.583" />
========
                    android:id="@+id/textView4"
                    android:layout_width="104dp"
                    android:layout_height="41dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/txt_sueldo_emprendedor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
>>>>>>>> bdf1117909a503d8bc2875df92192064265318f0:app/src/main/res/layout/activity_gastos_personales.xml

            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/txt_nombreGasto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
<<<<<<<< HEAD:app/src/main/res/layout/activity_gastospersonales1.xml
                android:hint="Nombre del gasto"
                android:inputType="text" />

            <EditText
                android:id="@+id/txt_montoImporte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Importe"
========
                android:hint="Nombre del Gasto"
>>>>>>>> bdf1117909a503d8bc2875df92192064265318f0:app/src/main/res/layout/activity_gastos_personales.xml
                android:inputType="text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
<<<<<<<< HEAD:app/src/main/res/layout/activity_gastospersonales1.xml
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBox3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Gatos necesario" />

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Gasto no necesario" />
            </LinearLayout>
========
                android:hint="Importe"
                android:inputType="number|numberDecimal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tipo de gasto"
                android:layout_marginTop="10dp"
                android:textSize="20dp"
                >

            </TextView>

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/radio_pirates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Necesario"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/radio_ninjas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:text="No Necesario"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>

>>>>>>>> bdf1117909a503d8bc2875df92192064265318f0:app/src/main/res/layout/activity_gastos_personales.xml

            <Button
                android:id="@+id/agregarGasto"
                android:layout_width="199dp"
                android:layout_height="wrap_content"
                android:onClick="agregarActivoFijo"
                android:text="Agregar" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="445dp">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TableLayout
                            android:id="@+id/tableLayout1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <!-- Agrega tus filas y celdas para la tabla 1 aquí -->

                        </TableLayout>

                        <TableLayout
                            android:id="@+id/tableLayout2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <!-- Agrega tus filas y celdas para la tabla 2 aquí -->

                        </TableLayout>

                    </LinearLayout>
                </HorizontalScrollView>
            </ScrollView>

        </LinearLayout>

        <!-- Parte para mostrar la tabla -->
    </LinearLayout>
</LinearLayout>